fixed issues on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,7 @@ html,
 	font-family: 'JetBrains Mono', monospace;
 	height: 100%;
 	width: 100%;
+	overflow: clip;
 }
 
 body {
